[package]
name = "response"
version = "1.0.1"
edition = "2024"
description = "Unified, type-safe API response builder for Axum applications."
license = "MIT"
repository = "https://github.com/canmi21/response"
readme = "README.md"
keywords = ["server", "unix", "api", "axum"]
categories = ["asynchronous", "network-programming", "web-programming"]
[lib]
path = "src/lib.rs"

[dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
axum = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"